--- a/src/app/planets/planet-details/planet-details.component.html
+++ b/src/app/planets/planet-details/planet-details.component.html
@@ -2,7 +2,7 @@
 	<!-- Show info about current planet -->
   <ng-container *ngIf="currentPlanet">
 		<div class="card-body">
-			<fa name="arrow-left" size="2x" style="float: right" [routerLink]="['/planets']"></fa>
+			<fa name="arrow-left" size="2x" class="clickable" style="float: right" [routerLink]="['/planets']"></fa>
 		  <h2 class="card-title">{{ currentPlanet.name }}</h2>
 		</div>
 		<ul class="list-group list-group-flush">
