--- a/src/app/planets/planets-table/planets-table.component.html
+++ b/src/app/planets/planets-table/planets-table.component.html
@@ -1,5 +1,5 @@
 <!-- Search bar -->
-<div class="input-group">
+<div class="input-group planets-table-search-bar">
   <input type="text"
          class="form-control"
          placeholder="Search..."
@@ -8,10 +8,10 @@
          (keydown.enter)="searchValue(true)"
   >
   <div class="input-group-append">
-    <span class="input-group-text" id="search-icon" (click)="searchValue(true)">
+    <span class="input-group-text clickable" id="search-icon" (click)="searchValue(true)">
       <fa name="search"></fa>
     </span>
-    <span class="input-group-text" id="cancel-icon" *ngIf="searchActive" (click)="searchValue(false)">
+    <span class="input-group-text clickable" id="cancel-icon" *ngIf="searchActive" (click)="searchValue(false)">
       <fa name="times"></fa>
     </span>
   </div>
@@ -19,70 +19,73 @@
 <!-- End of Search bar -->
 
 <!-- Table with planets -->
-<table class="table table-bordered table-hover">
-  <thead>
-  <tr>
-    <th>Id</th>
-    <th>Name</th>
-    <th>Diameter</th>
-    <th>Climate</th>
-    <th>Gravity</th>
-  </tr>
-  </thead>
-  <tbody>
-  <ng-container *ngFor="let planet of listOfPlanets">
-    <tr [routerLink]="['/planet/' + planet.id]" class="clickable">
-      <td>{{ planet.id }}</td>
-      <td>{{ planet.name }}</td>
-      <td>{{ planet.diameter }}</td>
-      <td>{{ planet.climate }}</td>
-      <td>{{ planet.gravity }}</td>
+<div class="table-responsive">
+  <table class="table table-bordered table-hover">
+    <thead>
+    <tr>
+      <th>Name</th>
+      <th>Diameter</th>
+      <th>Climate</th>
+      <th>Gravity</th>
+      <th>Terrain</th>
     </tr>
-  </ng-container>
-  <tr *ngIf="loading">
-    <!-- Show loading message -->
-    <td colspan="5">
-      <app-loading [message]="loadingMsg"></app-loading>
-    </td>
-    <!-- End of Show loading message -->
-  </tr>
-  <tr *ngIf="error">
-    <!-- Show error message -->
-    <td colspan="5">
-      <app-error [message]="errorMsg"></app-error>
-    </td>
-    <!-- End of Show error message -->
-  </tr>
-  <tr *ngIf="!loading && !error && listOfPlanets.length == 0">
-    <!-- Show no results message -->
-    <td colspan="5">
-      <ng-container *ngIf="searchActive; else empty_db">
-        No results found...
-      </ng-container>
-      <ng-template #empty_db>
-        There are no planets in the database!
-      </ng-template>
-    </td>
-    <!-- End of Show no results message -->
-  </tr>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+    <ng-container *ngFor="let planet of listOfPlanets">
+      <tr [routerLink]="['/planet/' + planet.id]" class="clickable">
+        <td>{{ planet.name }}</td>
+        <td>{{ planet.diameter }}</td>
+        <td>{{ planet.climate }}</td>
+        <td>{{ planet.gravity }}</td>
+        <td>{{ planet.terrain }}</td>
+      </tr>
+    </ng-container>
+    <tr *ngIf="loading">
+      <!-- Show loading message -->
+      <td colspan="5">
+        <app-loading [message]="loadingMsg"></app-loading>
+      </td>
+      <!-- End of Show loading message -->
+    </tr>
+    <tr *ngIf="error">
+      <!-- Show error message -->
+      <td colspan="5">
+        <app-error [message]="errorMsg"></app-error>
+      </td>
+      <!-- End of Show error message -->
+    </tr>
+    <tr *ngIf="!loading && !error && listOfPlanets.length == 0">
+      <!-- Show no results message -->
+      <td colspan="5">
+        <ng-container *ngIf="searchActive; else empty_db">
+          No results found...
+        </ng-container>
+        <ng-template #empty_db>
+          There are no planets in the database!
+        </ng-template>
+      </td>
+      <!-- End of Show no results message -->
+    </tr>
+    </tbody>
+  </table>
+</div>
 <!-- End of Table with planets -->
 
 <div class="" *ngIf="totalNumberOfPlanets > 0">
   <!-- Set how many planets per page -->
-  <ng-container *ngFor="let possibleValue of possibleNumberOfPlanetsPerPage">
-    <span class="possible-number-of-planets-per-page"
+  <div class="planets-table-per-page-picker">
+    <span class="possible-number-of-planets-per-page clickable"
           [ngClass]="{'current-number-of-planets-per-page' :possibleValue == numberOfPlanetsPerPage}"
+          *ngFor="let possibleValue of possibleNumberOfPlanetsPerPage"
           (click)="changeNumberOfPlanetsOnPage(possibleValue)"
     >
       {{ possibleValue }}
     </span>
-  </ng-container>
+  </div>
   <!-- End of Set how many planets per page -->
   <!-- Pagination for the table -->
   <ngb-pagination
-    class="d-flex justify-content-end"
+    class="planets-table-pagination"
     [collectionSize]="totalNumberOfPlanets"
     [pageSize]="numberOfPlanetsPerPage"
     [maxSize]="3"
