--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="container">
+	<div class="app-header">
+		<h1>Star Wars planets</h1>
+	</div>
   <router-outlet></router-outlet>
 </div>
