--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
+@font-face {
+  font-family: verdana;
+  src: url(assets/fonts/Verdana.ttf);
+}
+// Styling HTML elements
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'verdana', sans-serif;
+}
+// End of Styling HTML elements
+
 // Helpers
 .clickable {
 	cursor: pointer;
