Added space look

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,3 +1,10 @@
 .app-header {
-	margin-bottom: 50px;
+	margin-top: 25px;
+	margin-bottom: 25px;
+	text-align: center;
+
+	img {
+		max-width: 25vw;
+		height: auto;
+	}
 }
