--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import "app/app-shared/partials/_variables.less";
 
 @font-face {
   font-family: verdana;
@@ -11,7 +11,72 @@
   padding: 0;
   font-family: 'verdana', sans-serif;
 }
+body {
+	background-image: url("assets/img/starsBG.jpg");
+}
 // End of Styling HTML elements
+
+// General rules
+.input-group {
+	input.form-control {
+		background-color: @darkBackground;
+		border-color: @darkBorder;
+		color: white;
+	}
+	input.form-control:focus {
+		webkit-box-shadow: none;
+	  box-shadow: none;
+	}
+	div.input-group-append {
+		span.input-group-text {
+		  background-color: @darkBackground;
+			border-color: @darkBorder;
+			color: white;
+		}
+	}
+}
+ul.pagination {
+	li.page-item {
+
+		a.page-link {
+			background-color: @darkBackground;
+		  border-color: @darkBorder;
+		  color: white;
+		}
+		a.page-link:focus {
+		  webkit-box-shadow: none;
+    	box-shadow: none;
+		}
+	}
+	li.page-item.active {
+		a.page-link {
+			background-color: white;
+		  border-color: @darkBorder;
+		  color: @darkBackground;
+		}
+		a.page-link:focus {
+		  webkit-box-shadow: none;
+    	box-shadow: none;
+		}
+	}
+}
+.card {
+	background-color: @darkBackground;
+  border-color: @darkBorder;
+  color: white;
+}
+ul.list-group {
+	li {
+		background-color: @darkBackground;
+  	border-color: @darkBorder;
+  	color: white;
+
+  	a {
+  		color: #D4AF37;
+  	}
+  }
+}
+// End of General rules
 
 // Helpers
 .clickable {
