--- a/src/app/planets/planets-table/planets-table.component.html
+++ b/src/app/planets/planets-table/planets-table.component.html
@@ -20,7 +20,7 @@
 
 <!-- Table with planets -->
 <div class="table-responsive">
-  <table class="table table-bordered table-hover">
+  <table class="table table-dark table-bordered table-hover">
     <thead>
     <tr>
       <th>Name</th>
