Added min-width to logo and removed inline-styles

--- a/src/app/app-shared/alerts/loading/loading.component.html
+++ b/src/app/app-shared/alerts/loading/loading.component.html
@@ -1,4 +1,4 @@
 <div>
 	<fa name="spinner" animation="spin"></fa>
-  <span style="margin-left: 5px">{{ message }}</span>
+  <span class="small-margin-left">{{ message }}</span>
 </div>
