--- a/src/app/app-shared/alerts/error/error.component.html
+++ b/src/app/app-shared/alerts/error/error.component.html
@@ -1,4 +1,4 @@
-<div style="color: red">
+<div class="error-msg">
 	<fa name="exclamation-triangle"></fa>
-  <span style="margin-left: 5px">{{ message }}</span>
+  <span class="small-margin-left">{{ message }}</span>
 </div>
