--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <div class="container">
-	<div class="app-header">
-		<img src="assets/img/starsLogo.png">
-	</div>
-  <router-outlet></router-outlet>
+  <a href="#content" class="skip">Skip to content</a>
+  <header class="app-header">
+    <img src="assets/img/starsLogo.png" alt="Star Wats logo">
+  </header>
+  <main id="content">
+    <router-outlet></router-outlet>
+  </main>
 </div>
