--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,3 +1,23 @@
+a.skip {
+  position: absolute;
+  top: -1000px;
+  left: -1000px;
+  height: 1px;
+  width: 1px;
+  text-align: left;
+  overflow: hidden;
+
+  &:active, 
+  &:focus, 
+  &:hover {
+    left: 0; 
+    top: 0;
+    width: auto; 
+    height: auto; 
+    overflow: visible; 
+  }
+}
+
 .app-header {
 	margin-top: 25px;
 	margin-bottom: 25px;
