--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <a href="#content" class="skip">Skip to content</a>
   <header class="app-header">
-    <img src="assets/img/starsLogo.png" alt="Star Wats logo">
+    <img src="assets/img/starsLogo.png" alt="Star Wats logo" class="header-logo">
   </header>
   <main id="content">
     <router-outlet></router-outlet>
