--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -23,9 +23,10 @@ a.skip {
 	margin-bottom: 25px;
 	text-align: center;
 
-	img {
+	img.header-logo {
     min-width: 250px;
 		max-width: 25vw;
 		height: auto;
-	}
+  }
+  
 }
